<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/lightGrey"
    android:elevation="5dp"
    android:padding="10dp"
    android:clickable="true"
    android:id="@+id/movie_card"
    android:layout_margin="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="110dp"
            android:layout_height="165dp"
            android:id="@+id/poster_image"
            android:src="@drawable/hell_boy"
            android:layout_margin="5dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="165dp"
            android:orientation="vertical"
            android:layout_margin="5dp"
            android:layout_toRightOf="@id/poster_image">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/title"
                android:textSize="20sp"
                android:maxLines="1"
                android:ellipsize="end"
                android:textStyle="bold"
                android:textColor="@color/darkGreen"
                android:text="@string/avengers_endgame"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/rated"
                    android:textColor="@color/black"
                    android:layout_centerVertical="true"
                    android:text="@string/rated"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/rated"
                    android:textSize="35sp"
                    android:id="@+id/rating"
                    android:textColor="@color/darkGreen"
                    android:text=" 8.1 " />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:id="@+id/release_date"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:text="@string/random_date"
                    android:layout_alignParentEnd="true" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/insight"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="15sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:id="@+id/details"
                android:textColor="@color/black"
                android:maxLines="4"
                android:ellipsize="end"/>

        </LinearLayout>



    </RelativeLayout>


</android.support.v7.widget.CardView>
